--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "maltehuebner@gmx.org"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.0"
+    }
 }
