Whops, change email address to malte@caldera.cc

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Malte Huebner",
-            "email": "maltehuebner@gmx.org"
+            "email": "malte@caldera.cc"
         }
     ],
     "require": {
