--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,11 @@
     "require": {
         "php": "^7.0",
         "phpunit/phpunit": "^5.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Caldera\\MapPrinter\\": "src/"
+        }
     }
+
 }
