Require calderacc/geobasic.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "calderacc/geobasic": "dev-master",
         "php": "^7.0",
         "phpunit/phpunit": "^5.6",
         "emcconville/google-map-polyline-encoding-tool": ">=1.2.1"
